# tribunal

./: CHANGELOG.md  tribunal.cabal
src/: ABAC.hs  Class.hs  Core.hs  Examples.hs  Term.hs
